# PharmaOS

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.pharma_os/: scientific_memory.sqlite
data/: Source_Based_PoS_Workbook.xlsx  california_wac_data.xlsx
docs/: architecture_decisions.md  build_plan.md  project_brief.md  system_architecture_concise.md  system_architecture_detailed.md
outputs/: agent3_clinical_outcome_prediction.html  agent3_clinical_outcome_prediction.json  agent4_due_diligence.html  agent4_due_diligence.json  agent5_protocol_design.html  agent5_protocol_design.json  due_diligence.json  due_diligence_config_live.json  due_diligence_config_report.json  due_diligence_full_live.json  due_diligence_full_report.json  due_diligence_live.json  due_diligence_pricing_live.json  due_diligence_report.json  live_report.json  live_run.json  protocol_design.html  protocol_design.json  report.json  rich_source_offline_due_diligence_pricing.html  rich_source_offline_due_diligence_pricing.json  rich_source_offline_protocol_design.html  rich_source_offline_protocol_design.json  trial_intelligence_live_check.json
reports/: NCT04903795.html  NCT04999839.html  NCT05966480.html  NCT07011706.html  NCT12345678.html
tests/: conftest.py  test_agent_runtime.py  test_agent_runtime_routing.py  test_asset_identity.py  test_cli.py  test_clinical_outcome_prediction_workflow.py  test_clinicaltrials_tool.py  test_control_tower.py  test_due_diligence_config.py  test_due_diligence_sections.py  test_due_diligence_workflow.py  test_html_report.py  test_memory.py  (+4 more)
(+63 files in other folders)
