[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharma-os"
version = "0.1.0"
description = "Agentic workflow orchestration for pharmaceutical operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "openai-agents>=0.18.0",
  "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
pharma-os = "pharma_os.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
